# fry

./: Cargo.toml  Makefile
cli/: main.rs
core/: core.rs
page/: package.json  tailwind.config.js  vercelbuild.sh  vite.config.js
page/src/lib/components/: editor_sidebar.svelte  expand_bar.svelte  footer.svelte  nav.svelte
page/src/lib/components/editor_sidebar/: editor_sidebar.svelte
page/src/lib/components/editor_sidebar/children/: bottom.svelte  middle.svelte  top.svelte
page/src/routes/: +layout.svelte  +page.svelte
page/src/routes/process/: +page.svelte
