[package]
name = "fry"
version = "0.0.0"
edition = "2021"
description = "an image processing tool from hell"
license = "MIT"

[lib]
name = "fry_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
