[package]
name = "fry"
version = "0.0.0"
edition = "2021"
description = "an image processing tool from hell"
license = "MIT"

[lib]
name = "fry_core"
path = "./core/core.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }
edge-detection = "0.2.6"
image = "0.24.9"
rand = "0.8.5"
wgpu = "22.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
